# Gray-Blur

./: .gitattributes  CMakeLists.txt  README.md
Implementation/: CMakeLists.txt  FileIO.cpp  FileIO.h  Grayblur.cpp  Grayblur.h  io.cpp  main.cpp
Implementation/Bitmap/: Bitmap.h  BitmapFileIO.cpp  BitmapFileIO.h  CMakeLists.txt
Implementation/Filter/: CMakeLists.txt  Convolution.h  Gaussian.h  Grayblur.cpp  Grayblur.h  Sobel_operator.cpp  Sobel_operator.h  convolution.h  gaussian.h  gray.h  sobel.h
Implementation/Image/: CMakeLists.txt  Image.h
Implementation/Math/: CMakeLists.txt  Mymath.cpp  Mymath.h
include/: convolution.h  gaussian.h  gray.h  sobel.h
src/: bitmap.cpp  bitmap.h  gaussian.cpp  gray.cpp  image.cpp  image.h  io.cpp  io.h  main.cpp  sobel.cpp
